Fix z-index for calendar in Nav

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -54,6 +54,7 @@
 
 .calendar-icon {
     margin-bottom: 15px;
+    z-index: 10;
 }
 
 .dropdown-toggle::after {
